--- a/overhaul.html
+++ b/overhaul.html
@@ -149,16 +149,16 @@
         }
 		</script>
 		<style type="text/css">
-		.statement {
+/*		.statement {
 		    height:20px;
 		    width:100%;
 		    display: inline-block;
 		    font-size: 20px;
 			font-weight: bold;
-			padding-right: 250px;
+			padding-right: 25px;
 			text-shadow: 0px 1px 1px #fff;
 
-		}
+		}*/
 
 /*		#statements{ // this almost accomplishes the desired
 			color: #222;
