identified that access to #countdown identified span DOM element is a problem in modifying function to have a publicly accessible constructor. Checking DOM ready to see if this helps

--- a/timer.html
+++ b/timer.html
@@ -26,19 +26,30 @@ function formatTime(time) {
     // the structure below appears to be a module alike entity
     // it is hiding several functions from outside access / inspection
     // the function is wrapped in ( ) which means its self invoking, or that it is triggered immediately like most jQuery things
-    // 
-    // 
-    var thurtyseconds = new ( function() {
+    // what's new here is that all the vars are listed comma seperated, and once a ; is placed after a var, all subsequent vars
+    // ^^ this MAY be a quirk of jQuery
+    // with a 'this.' assignment can be looked at from outside
+    // the countdown var assigned through a public init has different properties, it only has access to context, instead of a zero indexed spanElement when called via $countdown
+    // when init is called outside the constructor via this. assignment it only has access to HTML document object, rather than span element
+    
+    var ThurtySeconds = new function() { // I have here amended from self invoking, and called init() outside
         var $countdown,
             $form, // Form used to change the countdown time
             incrementTime = 70,
-            currentTime = 3000,
+            currentTime = 300,
             updateTimer = function() {
+                console.log(currentTime);
+                console.log($countdown);
+                console.log(formatTime(currentTime));
+                // countdown returns object HTMLSpanElement
+                // $countdown returns object Object, but when init is public, said object lacks span context
+                // $countdown.html returns a function
                 $countdown.html(formatTime(currentTime)); // this function is purely for visual feedback
+                // $countdown.html("<br>HELLO"); has no effect
                 if (currentTime == 0) {
-                    thurtyseconds.Timer.stop();
+                    ThurtySeconds.Timer.stop();
                     timerComplete();
-                    thurtyseconds.resetCountdown();
+                    ThurtySeconds.resetCountdown();
                     return;
                 }
                 // the below handles the business of counting down
@@ -48,36 +59,44 @@ function formatTime(time) {
             timerComplete = function() {
                 alert('YOUR TURNS OVER! SCORE = ');
                 // goof place for the remove flip logic
-            },
-            init = function() {
+            };
+
+            this.init = function() {
+                console.log($countdown);
                 $countdown = $('#countdown');
-                thurtyseconds.Timer = $.timer(updateTimer, incrementTime, true);
-                $form = $('#thurtyseconds');
+                console.log($countdown);
+                ThurtySeconds.Timer = $.timer(updateTimer, incrementTime, false);
+                $form = $('#ThurtySeconds');
                 $form.bind('submit', function() {
-                    thurtyseconds.resetCountdown();
+                    ThurtySeconds.resetCountdown();
                     return false;
                 });
             };
         this.resetCountdown = function() {
             //var newTime = parseInt($form.find('input[type=text]').val()) * 100; // if changing manually
-            var newTime = 3000;
+            var newTime = 300;
             console.log(newTime);
             if (newTime > 0) {currentTime = newTime;}
             this.Timer.stop().once();
         };
-    $(init); // doesn't appear to be an easy way to invoke this outside of the object
-});
-console.log(Object.keys(thurtyseconds));
+    //$(init); // doesn't appear to be an easy way to invoke this outside of the object
+};
+console.log(Object.keys(ThurtySeconds));
+
+ThurtySeconds.init(); 
+// problem is that calling init as a public constructor outside of the "Object = new function()" invocation is that it doesn't get access to the span element for #countdown
+// one theory I have is that it might be DOM loading related
+// 
     </script>
 </head> 
 <body>
 
 
     <h3>Example 2 - Countdown Timer</h3>
-    <span id="countdown">00:30:00</span>
-    <form id="thurtyseconds">
-        <input type='button' value='Play/Pause' onclick='thurtyseconds.Timer.toggle();' />
-        <input type='button' value='Stop/Reset' onclick='thurtyseconds.resetCountdown();' />
+    <span id="countdown">00:03:00</span>
+    <form id="ThurtySeconds">
+        <input type='button' value='Play/Pause' onclick='ThurtySeconds.Timer.toggle();' /> <!-- init function creates the Timer object-->
+        <input type='button' value='Stop/Reset' onclick='ThurtySeconds.resetCountdown();' />
         <input type='text' name='startTime' value='300' style='width:30px;' />
     </form>
 
