--- a/gridtimed.html
+++ b/gridtimed.html
@@ -53,17 +53,13 @@
         function toggleRadio(){ // ensure flip button disengaged until all questions answered
             // this function is breaking things, if clicked the other two buttons dont function
             console.log($(':input','#statements')); // returns an array of html objects
-            forEachIn($(':input','#statements'), function(k,v){console.log("is css?"+v.checked);}); // works
+            forEachIn($(':input','#statements'), function(k,v){console.log("is checked?"+v.checked);}); // works
             //forEachIn($(':input', '#statements'), function(k,v){console.log("key is = "+k+" val = "+v);console.log(v.parentsUntil);}); works
 
-            $(':input','#statements').removeAttr('checked'); // this does remove the checked aka works
-            $('#statements').css("opacity", "0.2");
-            $('#statements').css("display", "block");
-            //$(':input','#statements').style( "display", "block" );
-            // .not(':button, :submit, :reset, :hidden')
-            // .val('')
-            // .removeAttr('checked')
+             // this does remove the checked aka works
+            $('div:hidden').show(); // shows fucking loads of things (maybe everything) including a weird loading icon
             // .removeAttr('selected');
+            $(':input','#statements').removeAttr('checked');
             return false;
         }
         function permitFlip(){}
@@ -145,13 +141,15 @@
                     {
                     if($(this).context.className == "guessed"){
                         // uses name identifier of any input elements
-                        $(this).parentsUntil( $('#statements') ).css( "display", "none" );
+                        //$(this).parentsUntil( $('#statements') ).css( "display", "none" ); // diy way
                         // traverses DOM tree until selector ID statements reached, all children of statements 'hidden' - via display none
+                        $(this).parentsUntil( $('#statements') ).hide();
                     } else if ($(this).context.className == "skip") {
                         console.log("LOSER");
                         // uses name identifier of any input elements
                         $(this).parentsUntil( $('#statements') ).css( "background-color", "red" );
                         // sets bg to red, principally a debug measure
+                        // 
                     }
                     }
                 forEachIn($(':input','#statements'), function(k,v){console.log("key = "+k+" val = "+v.checked);});
@@ -276,6 +274,6 @@
                 </div>
         <!-- </fieldset> -->
     </div>
-
+</form>
 </body>
 </html>
